fixes #24, overflow hidden removal on loader

--- a/sass/base/_bases.scss
+++ b/sass/base/_bases.scss
@@ -21,10 +21,8 @@ li {
 }
 
 body {
-  overflow: hidden;
+  height: 100vh;
+  width: 100%;
 }
 
-.scroll {
-  height: 100vh;
-  overflow: scroll;
-}
+
